Fixing spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -25,11 +25,11 @@ $font-family-sans-serif:  'Merriweather', serif !default;
 }
 
 body {
-  padding-top: 50px;
+  padding-top: 70px;
 }
 
 .header {
-  padding-top: 60px;
+  padding-top: 40px;
 }
 
 .anchor {
@@ -40,10 +40,10 @@ body {
 }
 
 .panel-default > .panel-heading {
-//  background-color: inherit;
+  background-color: inherit;
 }
 .panel-default {
-//  border: inherit;
+  border: inherit;
 }
 
 .accommodation {
